# mdbook-nix-eval

./: 404.html  Cargo.toml  README.md  chapter_1.html  flake.nix  index.html  print.html  searchindex.js  searchindex.json  shell.nix
examples/: Makefile  book.toml
examples/src/: chapter_1.md
examples/theme/: highlight.js
nix/devShells/: default.nix
src/: lib.rs  main.rs
