[package]
name = "mdbook-nix-eval"
version = "1.0.1"
authors = ["Jason R. McNeil <jason@mcneil.dev>"]
edition = "2018"
keywords = ["mdbook", "nix", "nixos"]
description = "A simple mdbook preprocessor for evaluating nix expressions"
repository = "https://github.com/jasonrm/mdbook-nix-eval"
homepage = "https://jasonrm.github.io/mdbook-nix-eval/"
readme = "README.md"
license = "MPL-2.0"
exclude = [
    "docs/*",
    "examples/*",
]

[badges]
maintenance = { status = "as-is" }

[dependencies]
clap = "2.33"
mdbook = "0.4"
pulldown-cmark = "0.8"
pulldown-cmark-to-cmark = "6.0"
serde_json = "1.0"
tempfile = "3"
toml = "0.5.8"