[package]
name = "mdbook-nix-eval"
version = "1.1.0"
authors = ["Jason R. McNeil <jason@mcneil.dev>"]
edition = "2024"
keywords = ["mdbook", "nix", "nixos"]
description = "A simple mdbook preprocessor for evaluating nix expressions"
repository = "https://github.com/jasonrm/mdbook-nix-eval"
homepage = "https://jasonrm.github.io/mdbook-nix-eval/"
readme = "README.md"
license = "MPL-2.0"
exclude = [
    "docs/*",
    "examples/*",
]

[badges]
maintenance = { status = "as-is" }

[dependencies]
clap = "4"
mdbook = "0.4"
pulldown-cmark = "0.13"
pulldown-cmark-to-cmark = "21"
serde_json = "1"
tempfile = "3"
toml = "0.9"
